# sentinel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.deploy  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-api.txt  requirements-dev.txt  requirements-mlx.txt  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  keepwarm.yml
docs/: DEPLOY.md  EVAL.md  MODEL_CARD.md  ROADMAP.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/views/: Alerts.tsx  Calibrate.tsx  Campaigns.tsx  Heatmap.tsx  Landscape.tsx  Overview.tsx  ReportCard.tsx  ThreatFeed.tsx
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_attack_techniques.py  0003_threat_reports.py  0004_campaigns.py  0005_alerts.py  0006_procedure_examples.py  0007_alert_source_host.py  0008_secondary_indexes.py  0009_alerts_techniques_gin.py  0010_calibration.py
scripts/: bench_anomaly.py  build_calibration_pack.py  eval_beacon_ctu13.py  eval_conformal.py  eval_conformal_cross.py  eval_cross_dataset.py  eval_cross_family.py  eval_domain_adapt.py  eval_ensemble.py  eval_label_efficiency.py  eval_mapper.py  generate_seed.py  refresh.sh
src/sentinel/: __init__.py  config.py  logging.py
src/sentinel/api/: app.py  limits.py
src/sentinel/bridge/: argus.py
src/sentinel/correlate/: campaigns.py  cves.py  fusion.py  hosts.py  trending.py
src/sentinel/db/: base.py  models.py
src/sentinel/ids/: anomaly.py  anomaly_mlx.py  attack_map.py  backends.py  beacon.py  calibrate.py  conformal.py  cross_dataset.py  (+9 more)
tests/: conftest.py  test_anomaly.py  test_anomaly_mlx.py  test_api.py  test_api_limits.py  test_argus_bridge.py  test_attack.py  test_backends.py  test_beacon.py  test_calibrate.py  test_calibration_api.py  test_calibration_migration.py  test_conformal.py  test_correlate.py  test_cross_dataset.py  test_domain_adapt.py  test_fusion.py  test_hosts.py  test_ids.py  test_kev.py  test_lexical.py  test_mapper.py  test_models.py  test_nvd.py  test_otx.py  test_pipelines_smoke.py  test_profile.py  test_replay_smoke.py  test_rss.py  test_sequence.py  test_spectral.py  test_sqli.py  test_tagging.py  test_trending.py
(+10 files in other folders)
