[project]
name = "sentinel"
version = "0.1.0"
description = "SENTINEL — cyber threat intelligence fusion platform: OSINT ingestion, intrusion detection, and ATT&CK-based correlation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "prefect>=3.0",
    "structlog>=24.1",
    "tenacity>=8.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "mlflow>=2.22,<3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
mlx = ["mlx>=0.31; sys_platform == 'darwin'"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["sentinel"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["prefect.*"]
follow_imports = "skip"

# No type stubs published for these ML libraries.
[[tool.mypy.overrides]]
module = ["lightgbm.*", "mlflow.*", "sklearn.*", "defusedxml.*"]
ignore_missing_imports = true

# mlx.nn ships incomplete typing — treat the whole package as untyped.
[[tool.mypy.overrides]]
module = ["mlx.*"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentinel.ids.anomaly_mlx", "sentinel.ids.sequence"]
disallow_subclassing_any = false
warn_return_any = false

# Prefect decorators appear untyped because their imports are skipped above.
[[tool.mypy.overrides]]
module = ["sentinel.ingest.flows"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=sentinel --cov-report=term-missing"

[tool.coverage.run]
source = ["src/sentinel"]
